--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <p>i love bangladesh</p>
+    <h3>my name is arnob</h3>
+    <h4>my father name is md tayab ali</h4>
+    <p>my school name is baf shaheen college kurmitola</p>
 </body>
 </html>
